--- a/MyHybridPOM2022/test-output/old/Default suite/classes.html
+++ b/MyHybridPOM2022/test-output/old/Default suite/classes.html
@@ -11,7 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>loginLinksTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>loginPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>isForgetPwdLinkExistsTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
