--- a/MyHybridPOM2022/test-output/old/Default suite/methods.html
+++ b/MyHybridPOM2022/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="676bab">  <td>22/02/25 13:28:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginPageTitleTest()[pri:0, instance:com.web.open.test.LoginTest@7e5afaa6]">loginPageTitleTest</td> 
-  <td>main@443384617</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/26 06:26:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginLinksTest()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">loginLinksTest</td> 
+  <td>main@33533830</td>   <td></td> </tr>
+<tr bgcolor="62887e">  <td>22/02/26 06:26:15</td>   <td>-8555</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@33533830</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/26 06:26:22</td>   <td>-900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.isForgetPwdLinkExistsTest()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">isForgetPwdLinkExistsTest</td> 
+  <td>main@33533830</td>   <td></td> </tr>
+<tr bgcolor="62887e">  <td>22/02/26 06:26:25</td>   <td>2355</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@33533830</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/26 06:26:23</td>   <td>318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginPageTitleTest()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">loginPageTitleTest</td> 
+  <td>main@33533830</td>   <td></td> </tr>
+<tr bgcolor="676bab">  <td>22/02/26 06:26:23</td>   <td>332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.web.open.test.LoginTest@7bd4937b]">loginTest</td> 
+  <td>main@33533830</td>   <td></td> </tr>
 </table>
