--- a/MyHybridPOM2022/test-output/old/Default suite/classes.html
+++ b/MyHybridPOM2022/test-output/old/Default suite/classes.html
@@ -11,11 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>loginPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>loginLinksTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginPageTitleTest</td>
+<td>footerLinksTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
